# simpleChatServer

./: .gitignore  CMakeLists.txt  TODO  chat.proto  main.cpp  makefile
conf/: config.conf
libs/headers/: AbstractTask.h  Config.h  Listener.h  Room.h  RoomManager.h  Sequence.h  SharedContainers.h  SpecificTasks.h  ThreadPool.h  User.h
libs/src/: Config.cpp  Listener.cpp  Room.cpp  RoomManager.cpp  SpecificTasks.cpp  ThreadPool.cpp
src/: AbstractTask.hpp  App.cpp  App.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Listener.cpp  Listener.hpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  SharedContainers.hpp  Singleton.hpp  SpecificTasks.cpp  SpecificTasks.hpp  ThreadPool.cpp  ThreadPool.hpp  User.hpp  main.cpp
test_tools/: chat.proto  chat_pb2.py  test.py  test1.py  test2.py  test3.py  test4.py  test5.py
